# final_project_henry

./: ,env  README.md  main.py  pyproject.toml  requirements.txt
data/test_contracts/: Copia de Contratos y Enmiendas de ejemplo.docx  Copia de Diferencias entre Contratos y Enmiendas de ejemplo.docx  README.md
src/: image_parser.py  models.py  pdf_processor.py
src/agents/: contextualization_agent.py  extraction_agent.py
tests/: test_agents.py  test_image_parser.py  test_models.py  test_pipeline.py
